samples/_failures_safe/1761637974_bf6df6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1d050e3.c: In function ‘main’:
./samples/SAFE/__tmp_e1d050e3.c:130:9: error: expected declaration or statement at end of input
  130 |         destroy_matrix(&mat2);
      |         ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e1d050e3.c:130:9: error: expected declaration or statement at end of input
